--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 :root {
+  /* couleur du content (du texte) */
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  /* couleur de départ du dégradé */
+  --background-start-rgb: 255, 255, 255;
+  /* couleur de fin du dégradé */
   --background-end-rgb: 255, 255, 255;
+
 }
 
 @media (prefers-color-scheme: dark) {
